    autopoint to build-deps.
  * Remove unnecessary libnss-sss.links.
  * Add libdhash-dev, libcollection-dev and libini-config-dev to build-deps.
  * Drop cvs from build-depends.
  * Add new packages: libipa-hbac0, libipa-hbac-dev, python-libipa-hbac.
  * libnss-sss.overrides: Add an override for 
    "package-name-doesnt-match-sonames".

 -- Petter Reinholdtsen <pere@debian.org>  Tue, 14 Sep 2010 12:06:37 +0200

sssd (1.2.1-4.3) unstable; urgency=medium

  * Non-maintainer upload.
  * Adjust install path to consider GNU triplet (Closes: #640626).

 -- Luca Falavigna <dktrkranz@debian.org>  Tue, 20 Sep 2011 20:02:34 +0200

sssd (1.2.1-4.2) unstable; urgency=low

  * Non-maintainer upload.
  * debian/sssd.install
    - updated location for ldb modules; Closes: #618159

 -- Sandro Tosi <morph@debian.org>  Fri, 03 Jun 2011 23:53:59 +0200

sssd (1.2.1-4.1) unstable; urgency=medium

   * Non-maintainer upload by the Security Team
   * Fix CVE-2010-4341 (Closes: #610032)

 -- Moritz Muehlenhoff <jmm@debian.org>  Tue, 25 Jan 2011 22:09:21 +0100

sssd (1.2.1-4) unstable; urgency=low

  * Add patch from Stephen Gallagher to ensure LDAP authentication
    never accept a zero length password (Closes: #594413).  Solves
    CVE-2010-2940.

 -- Petter Reinholdtsen <pere@debian.org>  Wed, 25 Aug 2010 22:33:40 +0200

sssd (1.2.1-3) unstable; urgency=low

  [ Petter Reinholdtsen ]
  * Look for /etc/default/sssd, not /etc/defaults/sssd in init.d
    script (Closes: #588252).
  * Make sssd.conf generation more robust, and make sure missing SRV
    records are ignored and not handled as host names.
  * Add code in generate-config to look up Kerberos realm using
    _kerberos TXT record in DNS if it exist.
  * Recommend bind9-host used by generate-config for SRV and TXT
    lookups.
  
  [ Morten Werner Forsbring ]
  * Check if /etc/default/sssd is a file and executable, not a directory,
    before sourcing in init-script. Thanks to lintian.
