@@ -3,7 +3,8 @@ Section: utils
 Priority: extra
 Maintainer: Petter Reinholdtsen <pere@debian.org>
 Uploaders: Morten Werner Forsbring <werner@debian.org>
-Build-Depends: debhelper (>= 8.1.3~), dnsutils, quilt, dh-autoreconf, autopoint,
+Build-Depends: debhelper (>= 8.1.3~), quilt, dh-autoreconf, autopoint, lsb-release,
+ dnsutils,
  libpopt-dev,
  libdbus-1-dev,
  libldap2-dev,
